# ERC

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
ERC/: Pure_pursuit.py  Pure_pursuit_Gazebo.py  Rover_control_Joy.py  Testing_Leapone.py  example_code.py
ERC/Rover_path_controller/: Gap_finder.py  Pure_pursuit_Gazebo.py  Testing_PPC_logic_matplotlib.py
scripts/: Testing_Leapone.py  obstacle_detector_node.py  pure_pursuit_avoidance_node.py
scripts/Rover_path_controller/: Pure_pursuit_Gazebo.py  Testing_PPC_logic_matplotlib.py  obstacle_avoidance.py  obstacle_detector_node.py  utils.py
